# shadow_auth

./: .gitignore  README.md  pyproject.toml
src/shadow_auth/: __init__.py  _state.py  blueprint.py  config.py  login_manager.py  models.py
src/shadow_auth/migrations/: __init__.py  shadow_auth_0001_firebase_uid.py  shadow_auth_0002_username.py
src/shadow_auth/templates/shadow_auth/: base.html  login.html
tests/: test_smoke.py
